Cambie una opcion a 'procrastinar' en conocimientos previos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <fieldset>
             <legend>Datos personales</legend>
             <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" placeholder="ingresa tu nombre" required>&nbsp;
+            <input type="text" id="nombre" placeholder="ingresa tu neim" required>&nbsp;
             <label for="apellido">Apellido:</label>
             <input type="text" id="apellido" placeholder="ingresa tu surneim" required><br><br>
             <label for="direccion">Direccion:</label>
@@ -45,7 +45,7 @@
         <input type="checkbox" name="conocimientos" value="phyton">Taekwondo&nbsp;
         <input type="checkbox" name="conocimientos" value="gei">Otro tipo de gei&nbsp;
         <input type="checkbox" name="conocimientos" value="chano">literalmente soy Chano&nbsp;
-        <input type="checkbox" name="conocimientos" value="django">Django<br><br>
+        <input type="checkbox" name="conocimientos" value="django">procrastinar<br><br>
         <label for="estudios">Estudios(select):</label>
         <select name="estudios" id="estudios">
             <option value="primaria">Primaria</option>
